# hawiisaac

./: .dockerignore  .gitignore  CONTENT_LOGGING_API_INTEGRATION.md  Dockerfile  Dockerfile.txt  SOCIAL_AUTH_FRONTEND_INTEGRATION.md  compose.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  start.sh
.github/workflows/: deploy.yml  main.yaml
app/: auth.py  config.py  main.py  redis.py  routes.py  token.py
app/dummy/: content.py  equipments.py  sessions.py  subscriptionPlan.py  users.py
app/utils/: auto_routing.py  datetime_formatter.py  otp_manager.py  send_email.py  social_auth_copy.py
applications/ai/: schema.py
applications/content/: models.py  schema.py
applications/equipments/: models.py  schema.py
applications/session/: models.py  schema.py
applications/site/: models.py
applications/user/: models.py  schema.py  subscription.py
docs/: CONTENT_LOGGING_API_INTEGRATION.md  WORKOUT_SYSTEM_PROCESS_GUIDE.md
routes/ai/: routes.py
routes/auth/: routes.py  swagger_auth.py
routes/content/: bookmarks.py  content.py  interactions.py
routes/equipments/: category.py  equipment.py  muscle_groups.py  routes.py
routes/sessions/: progress.py  routes.py
routes/site/: cookies.py  privacy.py  terms.py
routes/user/: permission.py  preference.py  routes.py  subscription.py
templates/: development.html  index.html  otp_email.html
templates/static/: style.css
